--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -274,14 +274,92 @@ int main()
 <img width="700" alt="image" src="https://github.com/user-attachments/assets/d1b61d5d-3809-4fb7-8a17-898b81c3555b" />
 
 
+### 📌 12.5 자동 변수(Automatic Variables)
+``` c
+#include <stdio.h>
+
+/*
+	Automatic storage class
+	- Automatic storage duration, block scope, no linkage
+	- Any variable declared in a block or function header
+*/
+
+void func(int k);
+
+int main()	//Note: main() is a function.
+{
+	auto int a;	// keyword auto : a storage-class specifier
+	a = 1024;
+	//printf("%d\n", a);		// what happens if uninitialized?
+	auto int b = a * 3;		// what happens if uninitialized?
+
+	int i = 1;
+	int j = 2;
+
+	printf("i %lld\n", (long long)&i);  // i 18085644
+
+	{
+		int i = 3;	// name hiding  <- 이름이 겹쳐서 부를 수 없어서 사용을 못할 뿐.
+		printf("i %lld\n", (long long)&i);  // i 18085620
+
+		int ii = 123;
+		// j is visible here
+		printf("j = %d\n", j);  // j = 2
+		// memory에 stack되서 안쪽 block에서 밖에 block의 j를 사용가능하다. (반대로는 불가)
+	}
+
+	// ii is not visible here
+
+	printf("i %lld\n", (long long)&i);	// i 18085644
+
+	for (int m = 1; m < 2; m++)
+		printf("m %lld\n", (long long)&m);  // m 18085596	// for문 안에 scope.
+
+	func(5);	// cannot see any of the variabled defined so far.
+
+	for (int m = 3; m < 4; m++)
+	{
+		printf("m %lld\n", (long long)&m);  // m 18085584			// block?
+	}
+
+	return 0;
+}
+
+void func(int k)  // stack frame 자체가 변한다. (block scope -> finction scope)
+{
+	int i = k * 2;
+	// do something with i and k
+	printf("i %lld\n", (long long)&i);  // i 18085352
+}
+```
 
 
+### 📌 12.6 레지스터 변수(register)
+- cpu의 임시 작업공간. (memory는 cpu와 분리되어 있음.)  
+  'register' keyword로 요청은 가능하지만, 매번 register에 올라가지는 않는다.  
+  (많이 사용하지는 않음 = GPU, 병렬처리 등으로 우회.)
+``` c
+#include <stdio.h>
+
+void temp(register int r)
+{
+	// do something with r
+}
+
+int main()
+{
+	register int r;
+	r = 123;
+
+	//printf("%p\n", &r);
+	//int* ptr = &r;  // register의 주소는 가지고 올 수 없음.
+
+	return 0;
+}
+```
 
 
-
-
-
-
+### 📌 
 
 
 
