--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -359,14 +359,146 @@ int main()
 ```
 
 
-### 📌 12.7 블록 영역의 정적 변수
+### 📌 12.7 블록 영역의 정적(static) 변수
+``` c
+#include <stdio.h>
+
+void count()
+{
+	int ct = 0;  // 끝나면 stack에서 빠져나감. (=function scope)
+	printf("count = %d %lld\n", ct, (long long)&ct);
+	ct++;
+
+	//return &ct;	// 포인터를 반횐해도, stack에서 사라지는 메모리이기 떄문에 의미가 없다.
+}
+
+void static_count()
+{
+	// 정적 메모리니까 초기화는 한번만 된다.
+	static int ct = 0;	// (Data seg. or BSS seg.)
+	printf("static count = %d %lld\n", ct, (long long)&ct);
+	ct++;
+
+	//return &ct;	// 고정 주소라 가능은 하지만, 권장하지는 않음. (차라리 전역변수)
+}
+
+/*
+	매개변수는 호출될 때마다 새로운 값이 스택에 저장됩니다.
+	그런데 static을 붙이면, 변수가 스택이 아니라 **정적 메모리(BSS/DATA 영역)**에 저장되도록 강제하는 셈이 됩니다.
+	이렇게 하면 함수 호출 방식과 맞지 않기 때문에 문법적으로 허용되지 않습니다.
+*/
+//int func(static int i)	// Warning (Error in GCC)
+//{
+//}
+
+void counter_caller()
+{
+	count();
+}
+
+void static_counter_caller()
+{
+	static_count();
+}
+
+int main()
+{
+	count();  // 직접호출 (불러지는 함수가 count()밖에 없어서 주소가 같을 수도 있다.
+	count();
+	counter_caller();  // 그래서 간접호출로 주소 다른 것 확인.
+
+	static_count();  // 아래 3개는 모두 주소가 같다.
+	static_count();
+	static_counter_caller();
+
+	return 0;
+}
+```
 
 
+### 📌 12.8 정적 변수의 외부 연결 (static variables with external linkage)
+- defining declaration vs referencing declaration  
+  <img width="650" alt="image" src="https://github.com/user-attachments/assets/58a6d28a-8c4f-4d6d-96ab-00c3d40ad26c" />
+  <img width="400" alt="image" src="https://github.com/user-attachments/assets/7aaba2a4-ed7d-4482-9a1a-257a6d97fb85" />
+
+``` c
+// main.c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+/*
+	Static variable with external linkage
+	- File scope, external linkage, static storage duration
+	- External storage class
+	- External variables
+*/
+
+/*
+	Initializing External Variables
+*/
+int x = 5;					// ok, constant expression
+int y = 1 + 2;				// ok, constant expression
+size_t z = sizeof(int);		// ok, sizeof is a constant expression
+//int x2 = 2 * x;			// not ok, x is a variable
+
+int g_int = 0;
+double g_arr[1000] = { 0.0, };
+
+void fun()
+{
+	printf("g_int in fun() %d %p\n", g_int, &g_int);
+	g_int += 10;
+}
+
+extern void fun_sec();
+
+int main()
+{
+	/*
+		defining declaration vs referencing declaration
+	*/
+
+	extern int g_int;			// Optional
+	//extern int g_int = 1024;	// Error in block scope
+
+	//int g_int = 123;			// hides global g_int
+
+	extern double g_arr[];		// optional, size is not necessary (사이즈는 위에서 이미 정의되었기 때문에)
+
+	printf("g_int in main() %d %p\n", g_int, &g_int);
+	g_int += 1;
+
+	fun();
+	fun_sec();
+
+	return 0;
+}
+
+// second.c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>	// printf() in second.c
+
+extern int g_int;
+
+void temp()
+{
+	g_int += 1000;
+}
+
+void fun_sec()
+{
+	temp();
+
+	extern int g_int;
+
+	g_int += 7;
+	printf("g_int in fun_sec() %d %p\n", g_int, &g_int);
+}
+
+```
 
 
-
-
-
+### 📌 12.9 정적 변수의 내부 연결 internal linkage
 
 
 
