--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -499,10 +499,14 @@ void fun_sec()
 
 
 ### 📌 12.9 정적 변수의 내부 연결 internal linkage
+- static을 전역변수 앞에 붙이게 되면, 파일 내에서만 사용가능해진다.  
+  전역 변수의 범위를 제한하여, 불필요한 외부 접근을 막고 충돌을 방지하는 데 유용.  
+  (static 키워드는 변수나 함수의 생존 기간(lifetime)과 가시 범위(scope)를 제어하는 역할)
+
+<img width="900" alt="image" src="https://github.com/user-attachments/assets/4b00b02f-e86a-4e92-9017-014c8da21da5" />
 
 
-
-
+### 📌 12.10
 
 
 
