--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -506,7 +506,25 @@ void fun_sec()
 <img width="900" alt="image" src="https://github.com/user-attachments/assets/4b00b02f-e86a-4e92-9017-014c8da21da5" />
 
 
-### 📌 12.10
+### 📌 12.10 변수의 저장 공간 분류 요약 정리(Storage Classes)
+
+<img width="900" alt="image" src="https://github.com/user-attachments/assets/c6476aae-9556-4ab9-9771-b309bb92c7b8" />
+
+
+### 📌 12.11 함수의 저장 공간 분류
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
