--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -511,8 +511,14 @@ void fun_sec()
 <img width="900" alt="image" src="https://github.com/user-attachments/assets/c6476aae-9556-4ab9-9771-b309bb92c7b8" />
 
 
-### 📌 12.11 함수의 저장 공간 분류
+### 📌 12.11 함수의 저장 공간 분류(Storage Classes and Functions)
+- Functions external (by default) or static. A function declaration is assumed to be extern.  
+  함수 및 프로토타입 선언 시 extern이 기본이다. (static 사용 시 동일하게 file안에서만.)  
+  왜 static으로 막아놓을까? -> 해당 Module(file)에서만 사용하는 함수라면.
 
+
+### 📌 12.12 난수 생성기 모듈 만들기 예제
+  
 
 
 
