--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -518,14 +518,107 @@ void fun_sec()
 
 
 ### 📌 12.12 난수 생성기 모듈 만들기 예제
-  
+<img width="900" alt="image" src="https://github.com/user-attachments/assets/27d16028-d29f-405f-b8fc-c8f54d6eb4bc" />
+
+
+### 📌 12.13 메모리 동적 할당(Dynamic Storage Allocation)
+- runtime에 메모리가 결정되는 경우 heap 영역 사용. (=필요한 메모리의 크기를 미리 알 수 없는 경우)  
+  malloc은 void 포인터를 반환하기 때문에, 앞에 casting을 해서 사용한다.  
+  ex) ptr = `(double*)`malloc(30 * sizeof(double));
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>	// malloc(), free()
+
+int main()
+{
+	float x;
+	char str[] = "Dancing with a Star";
+
+	int arr[100];
+
+
+	/*
+		malloc() returns a void type pointer.  
+		void* : generic pointer
+
+		free() deallocates the memory
+	*/
+
+	double* ptr = NULL;
+
+	ptr = (double*)malloc(30 * sizeof(double));
+
+	if (ptr == NULL)
+	{
+		puts("Memory allcation failed.");
+
+		// exit(EXIT_FAILURE) is similar to return 1 IN main().
+		// exit(EXIT_SUCCESS) is similar to return 0 IN main().
+		// return 0; 은 함수 내부에서만 사용 가능하지만, <stdlib.h>의 exit()은 어디서나 가능.
+		// C 언어에서 exit(EXIT_FAILURE);는 Python의 raise Exception과 비슷한 역할
+		exit(EXIT_FAILURE);
+	}
+
+	printf("Before free %p\n", ptr);
+
+	free(ptr);	// no action occurs when ptr is NULL
+
+	printf("After free %p\n", ptr);
+
+	// free로 메모리 반환 이후, ptr에 기존 주소값이 들어있으므로 NULL 대입.
+	// = 아무것도 가리키고 있지 않다. 라고 명시.
+	ptr = NULL;
 
 
 
+	/* Dynamically Allocated Array */
+
+	int n = 5;
+	// ... 
+	ptr = (double*)malloc(n * sizeof(double));  // casting, expression ...
+
+	if (ptr != NULL)	// if(!ptr)
+	{
+		for (int i = 0; i < n; ++i)
+			printf("%f ", ptr[i]);  // 배열처럼 사용 가능
+		printf("\n");
 
 
+		for (int i = 0; i < n; ++i)
+			*(ptr + i) = (double)i;  // 포인터 연산 가능
+
+		for (int i = 0; i < n; ++i)
+			printf("%f ", ptr[i]);
+		printf("\n");
+	}
+
+	free(ptr);
+	ptr = NULL;
+
+	/*
+		Comparision to VLA
+
+		VLA
+		- not supported by VS compilers.
+		- automatic duration, cannot be resized
+		- limited by stack size (when compiler places VLA in stack segment)
+	*/
+
+	return 0;
+}
+```
 
 
+### 📌 12.14 메모리 누수(Leak)와 free()의 중요성 + VS Diagnostic Tool
+- ptr은 받아온 메모리를 활용하고 block scope를 벗어나면서 사라졌지만,  
+  heap에서 할당받은 메모리는 free(), 해제해주지 않았기 때문에 유지되고 있다.  
+  <img width="700" alt="image" src="https://github.com/user-attachments/assets/bbeb6801-ee28-4163-92e8-6d5fe3211f75" />
+  만약 반복문에서 계속 leak가 있다면,  
+  <img width="700" alt="image" src="https://github.com/user-attachments/assets/44f063e0-3011-4230-b76c-83382303eab6" />
+- free()후 Memory usage (heap 메모리 반납)  
+  Tip : 동적할당은 block 안에서 활용하고, scope를 벗어날 때 해제 및 NULL처리를 해주는 편이 좋다.  
+  <img width="700" alt="image" src="https://github.com/user-attachments/assets/04f84401-69d8-407b-9670-b0a54f19b31a" />
 
 
 
