--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -813,6 +813,71 @@ int main()
 ```
 
 
+### 📌 2darray
+``` c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main()
+{
+	int row = 3, col = 2;
+
+	//int** ptr = (int**)malloc(row * sizeof(int*));
+	//for (int i = 0; i < row; ++i)
+	//	ptr[i] = (int*)malloc(col * sizeof(int));
+
+	//for (int i = 0; i < row; ++i)
+	//	for (int l = 0; l < col; ++l)
+	//		ptr[i][l] = l + col * i;
+
+	//for (int i = 0; i < row; ++i)
+	//{
+	//	for (int l = 0; l < col; ++l)
+	//		printf("%d ", ptr[i][l]);
+	//	printf("\n");
+	//}
+	//
+	//for (int i = 0; i < row; ++i)
+	//	free(ptr[i]);
+	//free(ptr);
+
+
+	//int* ptr = (int*)malloc(row * col * sizeof(int));
+	//int(*ptr2d)[1] = (int(*)[1])malloc(row * col * sizeof(int));
+
+	//int(*ptr2d)[2] = (int(*)[2])malloc(row * col * sizeof(int));
+
+	int** ptr2d = (int**)malloc(row * sizeof(int*));
+	if (!ptr2d) exit(1);
+
+	for (int i = 0; i < row; i++)
+	{
+		ptr2d[i] = (int*)malloc(col * sizeof(int));
+		if (!ptr2d[i]) exit(1);
+	}
+
+
+	for (int n = 0; n < row; n++)
+		for (int m = 0; m < col; m++)
+			ptr2d[n][m] = m + col * n;
+
+	for (int n = 0; n < row; n++)
+	{
+		for (int m = 0; m < col; m++)
+			printf("%d ", ptr2d[n][m]);
+		printf("\n");
+	}
+
+	for (int i = 0; i < row; i++)
+		free(ptr2d[i]);
+	free(ptr2d);
+
+
+	return 0;
+}
+```
+
+
 ### 📌 12.16 calloc(), realloc()
 
 
