--- a/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
+++ b/C/12.0_Storage_Classes,_Linkage_and_Memory_Management.md
@@ -879,10 +879,265 @@ int main()
 
 
 ### 📌 12.16 calloc(), realloc()
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/e898cb6b-4502-4f26-88fb-0a009e2e3329" />
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+
+int main()
+{
+	int n = 10;
+
+	int* ptr = NULL;
+
+	//ptr = (int*)malloc(sizeof(int) * n);
+	// calloc : 연속적인 할당.
+	// @@@@@ 초기화 해준다 @@@@@
+	ptr = (int*)calloc(n, sizeof(int));// contiguous allocation
+	if (!ptr)
+		exit(1);
+
+	for (int i = 0; i < n; ++i)
+		printf("%d ", ptr[i]);  // 0 0 0 0 0 0 0 0 0 0
+	printf("\n");
+
+
+	/*
+		realloc() KNK p. 422
+		- doesn't initialize the bytes added
+		- returns NULL if can't enlarge the memory block
+		- If first argument is NULL, it behaves like malloc()
+		- if second argument is 0, it frees the memory block.
+
+		- 추가된 바이트를 초기화하지 않습니다.
+		- 메모리 블록을 확대할 수 없는 경우 NULL을 반환합니다.
+		- 첫 번째 인수가 NULL이면 malloc()처럼 작동합니다.
+		- 두 번째 인수가 0이면 메모리 블록을 해제합니다.
+
+		- malloc -> realloc 가능.
+	*/
+
+	for (int i = 0; i < n; ++i)
+		ptr[i] = i + 1;
+
+	n = 20;
+
+	int* ptr2 = NULL;
+	ptr2 = (int*)realloc(ptr, n * sizeof(int));
+	//ptr = (int*)realloc(ptr, n * sizeof(int));
+
+	printf("%p %p\n", ptr, ptr2);  // 000002C66E366210 000002C66E35B0D0
+
+	printf("%d\n", ptr[0]);
+
+	if (!ptr2)
+		exit(1);
+	else
+		ptr = NULL;
+
+	for (int i = 0; i < n; ++i)
+		printf("%d ", ptr2[i]);		// 1 2 3 4 5 6 7 8 9 10 -842150451 -842....
+	printf("\n");
+
+	free(ptr2);
+
+	return 0;
+}
+```
+
+
+### 📌 12.17 동적 할당 메모리와 저장 공간 분류
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/ad09d04a-e0d4-46a6-9f43-fe41f4aba9d0" />
+
+
+### 📌 12.18 자료형 한정자들 (Type Qualifiers) const, volatile, restrict
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>	// memcpy
+#include "constants.h"
+
+//const double gravity = 9.8;
+//const double PI = 3.141592;
+
+int main()
+{
+	double area_circle = PI * 2.0f * 2.0f;
+
+	/*
+		Qualified types
+		const, volatile, restrict, _Atomic
+
+		_Atomic은 멀티쓰레딩에 사용될 예정.
+	*/
+
+	/*
+		const
+	*/
+
+	// C99 ideompotent - 타입한정자를 여러개 써도 괜찮다.
+	const const const int n = 6;// const int n = 6;
+
+	typedef const int zip;
+	const zip q = 8;// const const int zip
+
+	//const int i;	// NOT initialized!
+	//i = 12;//Error
+	//printf("%d\n", i);//Error
+
+	const int j = 123;  // const를 선언할 때는 꼭 초기화를 해야한다. (이후에 변경이 안되니까.)
+	const int arr[] = { 1, 2, 3 };
+
+	float f1 = 3.14f, f2 = 1.2f;
+
+	const float* pf1 = &f1;  // 값 변경 x, 주소값 변경 o
+	//*pf1 = 5.0f;//Error
+	pf1 = &f2;// Allowed
+
+	float* const pf2 = &f1;  // 값 변경 o, 주소값 변경 x
+
+	*pf2 = 6.0f;
+	//pf2 = &f2;//Error
+
+	const float* const pf3 = &f1;  // 값 변경 x, 주소값 변경 x
+	//*pf3 = 7.0f;//Error
+	//pf3 = &pf2;//Error
 
 
 
+	/*
+		Global constants
+	*/
+
+	/*
+		compiler가 모르는 상황에서 값이 변할 수 있다고 표기.
+		그러니까 최적화 하지 마라. (ex. (임시저장소)cashing을 못하게.)
+
+		volatile
+		- Do not optimize
+		- (ex: hardward clock)
+	*/
+
+	volatile int vi = 1;	// volatile location
+	volatile int* pvi = &vi;	// points to a volatile location
+
+	int i1 = vi;
+
+	// ...
+
+	int i2 = vi;
 
 
 
-  
+	/*
+		restrict (__restrict in VS)
+		- sole initial means of accessing a data object
+		- compiler can't check this restriction
+
+		제한 (VS에서__제한)
+		- 데이터 객체에 액세스하는 유일한 초기 수단
+		- 컴파일러가 이 제한을 확인할 수 없습니다
+		  (제한된 포인터로만 접근하자.)
+	*/
+
+	int ar[10] = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
+	int* par = ar;
+
+	int* __restrict restar = (int*)malloc(10 * sizeof(int));
+	if (!restar)exit(1);
+
+	ar[0] += 3;
+	par[0] += 5;
+	// par[0] += 8;
+
+	restar[0] += 3;
+	restar[0] += 5;
+	//restar[0] += 8;// Equalivalent
+
+	free(restar);
+
+	return 0;
+}
+```
+
+
+### 📌 12.19 멀티 쓰레딩(Multi-Threding)
+- 동시성 프로그래밍  
+  <img width="500" alt="image" src="https://github.com/user-attachments/assets/11fe1bba-ee98-41db-8973-25849da1b45f" />
+- 같은 함수를 여러개의 쓰레드가 동작시킬 때, 해당 함수 안에 있는 지역변수는 어떤 storage class를 갖는지. -> `thread storage duration` (지역변수와 동일)  
+  하나의 전역변수를 여러개의 쓰레드가 접근하면, 경쟁이 생긴다. -> racing(경쟁)을 막아준다. `atomic type qualifer` (C11) (but, 많은 반복 연산은 느리기 때문에 atomic은 피한다.)
+``` c 
+//// VS
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <windows.h>
+
+//_Atomic int acnt = 0; //NA
+
+DWORD WINAPI ThreadFunc(void* data)
+{
+	int n = 1;
+	Sleep(1000);
+
+	//acnt += n;	//NA
+	printf("Printing from Thread \n");
+	return 0;
+}
+
+int main()
+{
+	HANDLE thread = CreateThread(NULL, 0, ThreadFunc, NULL, 0, NULL);
+	
+	if (thread) 
+		WaitForSingleObject(thread, INFINITE);
+}
+
+//// GCC
+#include <stdio.h>
+#include <stdlib.h>
+#include <unistd.h>  // sleep().
+#include <pthread.h>
+#include <stdatomic.h>
+
+_Atomic int acnt = 0;// atomic type qualifer (C11)
+
+// A normal C function that is executed as a thread
+// when its name is specified in pthread_create()
+void *myThreadFun(void *vargp)
+{
+	int n = 1;// thread storage duration
+	for (int j = 0; j < 10; ++j)
+	{
+		sleep(1);
+		acnt += n;
+		printf("Printing from Thread %d %llu\n", acnt, (unsigned long long)&n);
+	}
+
+	return NULL;
+}
+
+int main()
+{
+	pthread_t thread_id1, thread_id2;
+
+	printf("Before Thread\n");
+
+	pthread_create(&thread_id1, NULL, myThreadFun, NULL);
+	pthread_create(&thread_id2, NULL, myThreadFun, NULL);
+
+	pthread_join(thread_id1, NULL);  // <- 쓰레드가 끝날때까지 기다려준다.
+	pthread_join(thread_id2, NULL);  // 쓰레드에 일 시켜놓고 main 함수가 끝나버리면 의미가 없기
+
+	printf("After Thread\n");
+	printf("Atomic %d\n", acnt);
+	return 0;
+}
+
+
+// To compile
+// 	$ gcc <file-name.c> -o <output-file-name> -lpthread
+// To run
+// 	$ ./<output-file-name>
+```
