--- a/C/13.0_File_Input_Output.md
+++ b/C/13.0_File_Input_Output.md
@@ -82,7 +82,11 @@ int main(int argc, char* argv[])
 	return 0;
 }
 ```
-- practice
+- practice  
+  1. Tip : scanf("%19s", file_path2):  
+  19로 입력 크기를 제한하여, 사용자가 100자 이상의 문자열을 입력하지 않도록.  
+  나머지 한 자리는 **널 종료 문자 \0**를 위한 공간 -> 버퍼 오버플로우 방지  
+  2. Tip : scanf로 입력을 받으면 '\n'이 버퍼에 남아서, while (getchar() != '\n'); 을 사용하여 남은 \n을 읽고 처리.
 ``` c
 #define _CRT_SECURE_NO_WARNINGS
 #include <stdio.h>
@@ -90,28 +94,56 @@ int main(int argc, char* argv[])
 
 int main()
 {
-	int ch, sf;
+	int pr;
 	FILE* file;
-	char file_path[] = "test.txt";
-	char file_path2[20] = "";
+	char file_path[20];
+	char text[20];
+	int ch;
 
-	printf("Typing path : ");
-	sf = scanf("%19s", file_path2);
-	if (sf != 1) exit(1);
+	printf("PATH : ");
+	//fgets(file_path, sizeof(file_path), stdin);
+	pr = scanf("%19s", file_path);
+	if (pr != 1) exit(1);
+	while (getchar() != '\n');
 
-	file = fopen(file_path2, "a+");
+	printf("TXT : ");
+	fgets(text, sizeof(text), stdin);
+
+	// write
+	file = fopen(file_path, "w");
+	if (!file) exit(1);
+
+	for (int i = 0; text[i] != '\0'; ++i)
+		fputc(text[i], file);
+
+	fclose(file);
+
+	// read
+	file = fopen(file_path, "r");
 	if (!file) exit(1);
 
 	while ((ch = fgetc(file)) != EOF)
 		putchar(ch);
+
 	fclose(file);
 
 	return 0;
 }
 ```
-- Tip : scanf("%19s", file_path2):  
-  19로 입력 크기를 제한하여, 사용자가 100자 이상의 문자열을 입력하지 않도록.  
-  나머지 한 자리는 **널 종료 문자 \0**를 위한 공간 -> 버퍼 오버플로우 방지
+
+
+### 📌 
+
+
+
+
+
+
+
+
+
+
+
 
 
 
