--- a/C/13.0_File_Input_Output.md
+++ b/C/13.0_File_Input_Output.md
@@ -194,15 +194,154 @@ int main()
 ```
 
 
-### 📌 13.4 텍스트 파일 입출력 함수들
+### 📌 13.4 텍스트 파일 입출력 함수들 (fprintf(), fscanf(), fgets(), fputs())
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/2d70d8be-eee5-416d-a541-0ad010915451" />
+
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/18a196f1-5f14-4dd2-bfea-c9aa60c7236e" />
+
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+#define MAX 31
+
+int main(void)
+{
+	FILE* fp;
+	char words[MAX] = { '\0', };
+
+	const char* filename = "record.txt";
+
+	/*
+	fopen() mode strings for text files
+	- r: reading
+	- w: creating-and-writing or over-writing
+	- a: appending or creating-and-writing
+	- r+: both reading and writing
+	- w+: reading and writing, over-writing or creating
+	- a+: reading and writing, appending or creating
+	*/
+
+	if ((fp = fopen(filename, "w+")) == NULL)// Try r+, w+, a+
+	{
+		fprintf(stderr, "Can't open \"%s\" file.\n", filename);
+		exit(EXIT_FAILURE);
+	}
+
+	//while ((fscanf(stdin, "%30s", words) == 1) && (words[0] != '.'))
+	//	fprintf(fp, "%s\n", words);
+
+	while ((fgets(words, MAX, stdin) != NULL) && (words[0] != '.'))
+		fputs(words, fp);
+
+	rewind(fp);  /* go back to beginning of file */
+
+	//while (fscanf(fp, "%s", words) != EOF)
+	//	fprintf(stdout, "%s\n", words);
+
+	while (fgets(words, MAX, fp) != NULL)// EOF check
+		fputs(words, stdout);
+
+	if (fclose(fp) != 0)
+		fprintf(stderr, "Error closing file\n");
+
+	return 0;
+}
+```
 
 
+### 📌 13.5 바이너리 파일 입출력
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/356057ab-57d9-4862-8b67-06a13b2b95f3" />
+
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+
+int main()
+{
+	/*
+	fopen() mode string for binary IO
+	- "rb", "wb", "ab"
+	- "ab+", "a+b"
+	- "wb+", "w+b"
+	- "ab+", "a+b"
+
+	C11 'x' mode fails if the file exists, instead of overwriting it.
+	- "wx", "wbx", "w+x", "wb+x", "w+bx"
+	*/
+
+	// Writing example
+	{
+		FILE* fp = fopen("binary_file", "wb");
+
+		double d = 1.0 / 3.0;
+		int n = 123;
+		int* parr = (int*)malloc(sizeof(int) * n);
+		if (!parr) exit(1);
+		for (int n = 0; n < 123; ++n)
+			*(parr + n) = n * 2;
+
+		// size_t fwrite(const void *ptr, size_t size, size_t count, FILE *stream);
+		// (데이터를 저장한 메모리 버퍼에 대한 포인터, 한 개의 항목이 차지하는 크기(바이트),
+		//  size 크기의 항목이 몇 개가 쓰일지 지정, 데이터를 쓸 파일 포인터)
+		fwrite(&d, sizeof(d), 1, fp);
+		fwrite(&n, sizeof(n), 1, fp);
+		fwrite(parr, sizeof(int), n, fp);
+
+		fclose(fp);
+		free(parr);
+
+		// Total size is 8 * 1 + 4 * 1 + 123 * 4 = 504 bytes
+	}
+	// Reading example, feof(), ferror()
+	{
+		FILE* fp = fopen("binary_file", "rb");
+		double d;
+		int n = 0;
+		fread(&d, sizeof(d), 1, fp);
+		fread(&n, sizeof(n), 1, fp);
+
+		int* parr = (int*)malloc(sizeof(int) * n); 
+		if (!parr) exit(1);
+
+		fread(parr, sizeof(int), n, fp);
+
+		// 저장된 갯수만큼만 불러왔기 때문에 EOF를 만나지 않았음 = 0
+		printf("feof = %d\n", feof(fp));
+
+		printf("%f\n", d);
+		printf("%d\n", n);
+		for (int i = 0; i < n; ++i)
+			printf("%d ", *(parr + i));
+		printf("\n");
+
+		printf("feof = %d\n", feof(fp));
+
+		fread(&n, sizeof(n), 1, fp);		 // read one more toward EOF
+
+		// EOF 만났음 = 1
+		printf("feof = %d\n", feof(fp));     // returns non-zero at EOF
+		printf("ferror = %d\n", ferror(fp)); // returns 0 : ok
+
+		fwrite(&n, sizeof(n), 1, fp);		 // try writing to make an error
+
+		printf("ferror = %d\n", ferror(fp)); // 0 is ok, non-zero otherwise.
+
+		fclose(fp);
+		free(parr);
+	}
+
+	return 0;
+}
+```
 
 
+### 📌 13.6 파일 임의 접근(Random Access)
 
-
-
-
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/e146e981-b436-4850-8b0b-4daa5fc7ed1c" />
 
 
 
