--- a/C/13.0_File_Input_Output.md
+++ b/C/13.0_File_Input_Output.md
@@ -340,12 +340,60 @@ int main()
 
 
 ### 📌 13.6 파일 임의 접근(Random Access)
-
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/e146e981-b436-4850-8b0b-4daa5fc7ed1c" />
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/918eab43-456b-4283-bccc-040d02bc192c" />
+
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int main()
+{
+	// make a test binary file
+	{
+		FILE* fp = fopen("binary", "wb");
+		for (int i = 0; i < 100; ++i)
+		{
+			double d = i * 1.11;
+			fwrite(&d, sizeof(double), 1, fp);
+		}
+		fclose(fp);
+	}
+
+	// read
+
+	FILE* fp = fopen("binary", "rb");
+	long cur;
+	double d;
+
+	cur = ftell(fp);
+	printf("Before reading %ld\n", cur);
+
+	fread(&d, sizeof(double), 1, fp);
+
+	cur = ftell(fp);
+	printf("After reading %ld\n", cur);
+
+	printf("%f\n", d);
+
+	fread(&d, sizeof(double), 1, fp);
+	printf("%f\n", d);
+
+	cur = ftell(fp);
+	printf("After reading %ld\n", cur);
+
+	fseek(fp, 32L, SEEK_SET);	// 32 = 4 * 8
+	fread(&d, sizeof(double), 1, fp);
+	printf("%f\n", d);
+
+	fclose(fp);
+
+	return 0;
+}
+```
 
 
-
-
+### 📌 13.7 기타 입출력 함수들 (ungetc(), fflush(), setvbuf())
 
 
 
