--- a/C/13.0_File_Input_Output.md
+++ b/C/13.0_File_Input_Output.md
@@ -399,10 +399,25 @@ int main()
 
 
 
-
-
-
-
-
-
-
+### 📌 정리
+- 입력 함수:  
+  `scanf`: 표준 입력에서 형식화된 데이터를 읽을 때 사용. 공백(스페이스, 탭, 개행 등)으로 구분하여 읽기 때문에 \n은 읽지 않음.  
+  `fscanf`: 파일에서 형식화된 데이터를 읽을 때 사용. 공백으로 구분하여 데이터를 읽으며, \n은 읽지 않음.  
+  ㄴ 반환 값: 성공: 읽은 항목 개수, 실패: EOF  
+  `getc`: 표준 입력에서 한 문자를 읽을 때 사용. \n도 문자로 읽음.  
+  `fgetc`: 파일에서 한 문자를 읽을 때 사용. \n도 문자로 읽음.  
+  ㄴ 반환 값: 읽은 문자(int), 실패 시 EOF  
+  gets: 버퍼 오버플로우의 위험이 있어 사용하지 않음. 표준 입력에서 문자열을 읽지만, \n은 자동으로 버리고 읽음.  
+  `fgets`: 표준 입력 또는 파일에서 문자열을 읽을 때 사용. \n을 포함하여 문자열을 읽음.  
+  ㄴ 반환 값: 읽은 문자열, 실패 시 `NULL`  
+- 출력 함수:  
+  `printf`: 표준 출력에 형식화된 데이터를 출력할 때 사용. 개행 문자를 자동으로 추가하지 않음.  
+  `fprintf`: 파일에 형식화된 데이터를 출력할 때 사용. 개행 문자를 자동으로 추가하지 않음.  
+  ㄴ 반환 값: 출력된 문자 개수  
+  `putc`: 표준 출력에 한 문자를 출력할 때 사용.  
+  `fputc`: 파일에 한 문자를 출력할 때 사용.  
+  ㄴ 반환 값: 출력한 문자, 실패 시 EOF  
+  `puts`: 표준 출력에 문자열을 출력할 때 사용. `자동으로 \n을 추가`하여 출력 후 줄바꿈.  
+  ㄴ 반환 값: 성공 시 양의 정수 (일반적으로 출력된 문자 개수), 실패 시 EOF  
+  `fputs`: 파일에 문자열을 출력할 때 사용. 자동으로 \n을 추가하지 않음.  
+  ㄴ 반환 값: 성공: 0, 실패 시 EOF  
