--- a/C/13.0_File_Input_Output.md
+++ b/C/13.0_File_Input_Output.md
@@ -393,31 +393,181 @@ int main()
 ```
 
 
-### 📌 13.7 기타 입출력 함수들 (ungetc(), fflush(), setvbuf())
-
-
-
-
-
 ### 📌 정리
 - 입력 함수:  
-  `scanf`: 표준 입력에서 형식화된 데이터를 읽을 때 사용. 공백(스페이스, 탭, 개행 등)으로 구분하여 읽기 때문에 \n은 읽지 않음.  
-  `fscanf`: 파일에서 형식화된 데이터를 읽을 때 사용. 공백으로 구분하여 데이터를 읽으며, \n은 읽지 않음.  
+  ✅ `scanf`: 표준 입력에서 형식화된 데이터를 읽을 때 사용. 공백(스페이스, 탭, 개행 등)으로 구분하여 읽기 때문에 \n은 읽지 않음.  
+  ✅ `fscanf`: 파일에서 형식화된 데이터를 읽을 때 사용. 공백으로 구분하여 데이터를 읽으며, \n은 읽지 않음.  
   ㄴ 반환 값: 성공: 읽은 항목 개수, 실패: EOF  
-  `getc`: 표준 입력에서 한 문자를 읽을 때 사용. \n도 문자로 읽음.  
-  `fgetc`: 파일에서 한 문자를 읽을 때 사용. \n도 문자로 읽음.  
+  ✅ `getc`: 표준 입력에서 한 문자를 읽을 때 사용. \n도 문자로 읽음.  
+  ✅ `fgetc`: 파일에서 한 문자를 읽을 때 사용. \n도 문자로 읽음.  
   ㄴ 반환 값: 읽은 문자(int), 실패 시 EOF  
   gets: 버퍼 오버플로우의 위험이 있어 사용하지 않음. 표준 입력에서 문자열을 읽지만, \n은 자동으로 버리고 읽음.  
   `fgets`: 표준 입력 또는 파일에서 문자열을 읽을 때 사용. \n을 포함하여 문자열을 읽음.  
   ㄴ 반환 값: 읽은 문자열, 실패 시 `NULL`  
 - 출력 함수:  
-  `printf`: 표준 출력에 형식화된 데이터를 출력할 때 사용. 개행 문자를 자동으로 추가하지 않음.  
-  `fprintf`: 파일에 형식화된 데이터를 출력할 때 사용. 개행 문자를 자동으로 추가하지 않음.  
+  ✅ `printf`: 표준 출력에 형식화된 데이터를 출력할 때 사용. 개행 문자를 자동으로 추가하지 않음.  
+  ✅ `fprintf`: 파일에 형식화된 데이터를 출력할 때 사용. 개행 문자를 자동으로 추가하지 않음.  
   ㄴ 반환 값: 출력된 문자 개수  
-  `putc`: 표준 출력에 한 문자를 출력할 때 사용.  
-  `fputc`: 파일에 한 문자를 출력할 때 사용.  
+  ✅ `putc`: 표준 출력에 한 문자를 출력할 때 사용.  
+  ✅ `fputc`: 파일에 한 문자를 출력할 때 사용.  
   ㄴ 반환 값: 출력한 문자, 실패 시 EOF  
   `puts`: 표준 출력에 문자열을 출력할 때 사용. `자동으로 \n을 추가`하여 출력 후 줄바꿈.  
   ㄴ 반환 값: 성공 시 양의 정수 (일반적으로 출력된 문자 개수), 실패 시 EOF  
   `fputs`: 파일에 문자열을 출력할 때 사용. 자동으로 \n을 추가하지 않음.  
   ㄴ 반환 값: 성공: 0, 실패 시 EOF  
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/* scanf, printf */
+	char c;
+
+	scanf("%c", &c);
+	printf("%c", c);
+	
+	
+
+	/* fscanf, fprintf */
+	int num;
+	char s[50];
+	FILE* fp;
+		
+	fp = fopen("test.txt", "r");
+	while (fscanf(fp, "%d %s", &num, s) != EOF)
+		printf("%d %s\n", num, s);
+	fclose(fp);
+
+	fp = fopen("test.txt", "a");
+	fprintf(fp, "%d %s\n", 100, "Apple");
+	fclose(fp);
+
+	fp = fopen("test.txt", "r");
+	while (fscanf(fp, "%d %s", &num, s) != EOF)
+		printf("%d %s\n", num, s);
+	fclose(fp);
+
+
+
+	/* getc, fgetc, putc, fputc */
+	char c;
+	FILE* fp;
+
+	// write
+	c = getc(stdin);
+	//putc(c, stdout);
+	fp = fopen("test.txt", "a");
+	fputc(c, fp);
+	fclose(fp);
+
+	// read
+	fp = fopen("test.txt", "r");
+	while ((c = fgetc(fp)) != EOF)
+		putc(c, stdout);
+	fclose(fp);
+
+
+
+	/* gets, fgets, puts, fputs */
+	char s[50];
+	FILE* fp;
+
+	// no file
+	fgets(s, sizeof(s), stdin);
+	//puts(s);
+	fputs(s, stdout);
+
+	// in file
+	fp = fopen("test.txt", "w");
+	fputs(s, fp);
+	fclose(fp);
+
+	return 0;
+}
+```
+
+
+### 📌 13.7 기타 입출력 함수들 (ungetc(), fflush(), setvbuf())
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+
+int main()
+{
+	FILE* fp;
+	int ch;
+
+	/* ungetc() : buffer에 int형 값을 넣는 함수. */ 
+	fp = fopen("input.txt", "r");
+
+	ch = fgetc(fp);
+	fputc(ch, stdout);
+
+	ungetc((int)'A', fp);
+
+	ch = fgetc(fp);
+	fputc(ch, stdout);
+
+	ch = fgetc(fp);
+	fputc(ch, stdout);
+
+	fclose(fp);
+
+
+
+	/* setvbuf() : buffer의 성질을 변경해주는 함수. */
+	// buffer는 프로그램이 해당 파일을 계속 읽을 것 같으면, 미리 buffer에 넣어놓는다.
+
+	fp = fopen("input.txt", "r");
+
+	char buffer[32] = {'\0',};
+
+	setvbuf(fp, buffer, _IOFBF, sizeof(buffer));	// _IOLBF, _IOFBF, _IONBF
+	
+	// dump buffer
+	for (int i = 0; i < sizeof(buffer); ++i)
+		printf("%hhd", buffer[i]);  // 00000000000000000000000000000000
+	printf("\n");
+
+	ch = fgetc(fp);	 // 한글자만 읽었음.
+
+	// dump buffer
+	for (int i = 0; i < sizeof(buffer); ++i)
+			printf("%c", buffer[i]);  // abcdefghijklmnop  <- 한글자만 갖고 왔는데 전부 출력됨. (
+		printf("\n");
+
+	fclose(fp);
+
+
+
+    /* fflush() */
+	// fflush()는 출력 스트림(stdout, 파일)에서 버퍼를 비울 때 유용합니다.
+	// 파일 쓰기 후 즉시 저장, printf() 출력 즉시 반영 같은 경우에 자주 사용
+
+	fflush(fp);
+
+	return 0;
+}
+```
+
+
+### 📌 13.8 텍스트 파일을 바이너리 처럼 읽어보기
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
