--- a/C/13.0_File_Input_Output.md
+++ b/C/13.0_File_Input_Output.md
@@ -255,6 +255,15 @@ int main(void)
 ### 📌 13.5 바이너리 파일 입출력
 <img width="700" alt="image" src="https://github.com/user-attachments/assets/356057ab-57d9-4862-8b67-06a13b2b95f3" />
 
+- `fread()` - 바이너리 파일에서 데이터 읽을 때 사용.  
+  텍스트 파일도 읽을 수 있지만, fscanf()나 fgets()를 더 자주 사용  
+  `fwrite()` - 바이너리 파일에 데이터를 쓸 때 사용.  
+  텍스트 파일도 쓸 수 있지만, fprintf()나 fputs()를 더 자주 사용
+  `feof()` - 파일 끝(EOF) 확인  
+  while (!feof(fp)) 같은 형태로 사용됨, 읽기 루프에서 EOF를 확인하는 용도로 사용  
+  `ferror()` - 파일 에러 확인  
+  파일 읽기/쓰기 과정에서 에러 발생 여부 확인, if (ferror(fp)) { perror("파일 오류"); } 처럼 사용
+
 ``` c
 #define _CRT_SECURE_NO_WARNINGS
 #include <stdio.h>
