--- a/C/13.0_File_Input_Output.md
+++ b/C/13.0_File_Input_Output.md
@@ -561,22 +561,28 @@ int main()
 
 
 ### 📌 13.8 텍스트 파일을 바이너리 처럼 읽어보기
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/3c28ddc1-0420-43bd-a0c3-1b231472ddf9" />
 
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <windows.h>	// SetConsoleOutputCP()
 
+int main()
+{
+	FILE* fp = fopen("test.txt", "rb");
 
+	unsigned char ch;
 
+	SetConsoleOutputCP(CP_UTF8);// UTF-8 mode
 
+	while (fread(&ch, sizeof(unsigned char), 1, fp) > 0)
+	{
+		printf("%hhu %c\n", ch, ch);
+	}
 
+	fclose(fp);
 
-
-
-
-
-
-
-
-
-
-
-
-
+	return 0;
+}
+```
