--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -1,3 +1,165 @@
-### 📌 14.1 구조체가 필요한 이유
+### 📌 14.1 구조체(Structures)가 필요한 이유
+- 배열은 자료형이 같은 데이터만 모을 수 있는데, 다른 자료형은 어떻게?
+<img width="800" alt="image" src="https://github.com/user-attachments/assets/1d45327c-4844-47c6-9f30-16d270c5891f" />
+
+
+### 📌 14.2 구조체의 기본적인 사용법
 ``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+#define MAX 41
+
+// 쿠키 틀이 이런 형태일거다!
+struct person	/* Person is a tag of strcture*/
+{
+	char name[MAX];	// member
+	int age;		// member
+	float height;	// member
+};
+
+int main()
+{
+	int flag;// Receives return value of scanf()
+
+
+
+	/* Structure variable */
+	struct person genie;  // 구조체 변수를 선언하는 순간 메모리가 할당된다.
+
+	// dot(.) is structure membership operator (member access operator, member operator)
+	strcpy(genie.name, "Will Smith");
+	//strncpy(genie.name, "Will Smith", MAX);
+	//genie.name = "Will Smith";  // C 언어에서는 문자열을 대입 연산자(=)로 직접 할당할 수 없습니다.
+	genie.age = 1000;
+
+	// dot(.) has higher precedence than &
+	flag = scanf("%f", &genie.height);//&(genie.height)
+	printf("%f\n", genie.height);
+
+
+
+	/* Initialization */
+	struct person princess = { "Naomi Scott", 18, 160.0f };
+
+	struct person princess2 = {
+		"Naomi Scott",
+		18,
+		160.0f
+	};
+
+	strcpy(princess.name, "Naomi Scott");
+	princess.age = 18;
+	princess.height = 160.0f;
+
+
+
+	/*  Designated initializers */
+	struct person beauty = {
+		.age = 19,
+		.name = "Bell",
+		.height = 150.0f
+	};
+	//struct person beauty = { .age = 19, .name = "Bell", .height = 150.0f };
+
+
+
+	/* Pointer to a strcture variable */
+	struct person* someone;
+
+	someone = &genie;
+	//someone = (struct Person*)malloc(sizeof(struct Person)); // and free later
+
+
+
+	/* Indirect member(ship) operator (or structure pointer operator) */
+	someone->age = 1001;// arrow(->) operator
+	printf("%s %d\n", someone->name, (*someone).age);
+
+
+
+	/* Structure declarations in a function */
+	struct book
+	{
+		char title[MAX];
+		float price;
+	};
+
+
+
+	/* No tag */  // 잠깐 쓰고 말 구조체라면...
+	struct
+	{
+		char farm[MAX];
+		float price;
+	} apple, apple2;
+
+	strcpy(apple.farm, "Trade Joe");
+	apple.price = 1.2f;
+
+	strcpy(apple2.farm, "Safeway");
+	apple2.price = 5.6f;
+
+
+
+	/* typedef and structure */
+
+	typedef struct person my_person;
+
+	my_person p3;
+
+	typedef struct person person;
+
+	person p4;
+
+	typedef struct {
+		char name[MAX];
+		char hobby[MAX];
+	} friend;
+
+	friend f4;
+
+	return 0;
+}
 ```
+
+
+### 📌 14.3 구조체의 메모리 할당(Memory Allocation)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
