--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -127,9 +127,165 @@ int main()
 
 
 ### 📌 14.3 구조체의 메모리 할당(Memory Allocation)
+- PADDING.
+``` c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main()
+{
+	/*
+		Well aligned structure
+	*/
+
+	struct Aligned
+	{
+		int a;
+		float b;
+		double c;
+	};
+
+	/*
+	 0 1 2 3 4 5 6 7|8 9 10 11 12 13 14 15|
+	|int a  |float b|double c             |
+	4 + 4 + 8 = 16
+	*/
 
 
 
+	struct Aligned a1, a2;
+
+	printf("struct Aligned a1\n");
+	printf("Sizeof %zd\n", sizeof(struct Aligned));	// Sizeof 16
+	printf("%lld\n", (long long)&a1);				// 828852140520
+	printf("%lld\n", (long long)&a1.a);				// 828852140520
+	printf("%lld\n", (long long)&a1.b);				// 828852140524
+	printf("%lld\n", (long long)&a1.c);				// 828852140528
+
+	printf("\nstruct Aligned a2\n");
+	printf("Sizeof %zd\n", sizeof(a2));		// Sizeof 16
+	printf("%lld\n", (long long)&a2);		// 828852140568
+	printf("%lld\n", (long long)&a2.a);		// 828852140568
+	printf("%lld\n", (long long)&a2.b);		// 828852140572
+	printf("%lld\n", (long long)&a2.c);		// 828852140576
+
+
+
+	/*
+		padding (struct member alignment)
+		- 1 word: 4 bytes in x86, 8 bytes in x64
+		          CPU와 메모리가 데이터를 주고받을 때 사용되는 기본 단위.
+	*/
+
+	struct Padded1
+	{
+		char a;
+		float b;
+		double c;
+	};
+
+	/* Without padding
+	 0 1 2 3 4 5 6 7|8 9 10 11 12 13 14 15|16
+	|a|float b|double c          | ?  ?  ?     <<- 데이터가 잘려서 도착함.
+	1 + 4 + 8 = 13
+	*/
+
+	/* With padding
+	 0 1 2 3 4 5 6 7|8 9 10 11 12 13 14 15|16  <<-  char 뒤에 3자리 더 패딩.
+	|char a |float b|double c             |
+	4(char?) + 4 + 8 = 16
+	*/
+
+	struct Padded1 p1;
+
+	printf("\nstruct Padded1 p1\n");
+	printf("Sizeof %zd\n", sizeof(p1));		// Sizeof 16
+	printf("%lld\n", (long long)&p1);		// 620863616296
+	printf("%lld\n", (long long)&p1.a);		// 620863616296  <<-
+	printf("%lld\n", (long long)&p1.b);		// 620863616300
+	printf("%lld\n", (long long)&p1.c);		// 620863616304
+
+
+
+
+	struct Padded2
+	{
+		float a;
+		double b;
+		char c;
+	};
+
+	/*
+	|0 1 2 3 4 5 6 7|8 9 10 11 12 13 14 15|16 17 18 19 20 21 22 23|24
+	|float a        | double b            | char c                |
+	8(float?) + 8 + 8(char?) = 24
+
+	double을 자르지 않으려고 float에 +4 패딩.
+	*/
+
+	struct Padded2 p2;
+
+	printf("\nstruct Padded p2\n");
+	printf("Sizeof %zd\n", sizeof(p2));		// Sizeof 24
+	printf("%lld\n", (long long)&p2);		// 620863616344
+	printf("%lld\n", (long long)&p2.a);		// 620863616344
+	printf("%lld\n", (long long)&p2.b);		// 620863616352
+	printf("%lld\n", (long long)&p2.c);		// 620863616360
+
+
+
+	struct Padded3
+	{
+		char a;
+		double b;
+		double c;
+	};
+
+	/*
+	|0 1 2 3 4 5 6 7|8 9 10 11 12 13 14 15|16 17 18 19 20 21 22 23|24
+	| char a        | double b            | double c              |
+	8(char?) + 8 + 8 = 24
+	*/
+
+	struct Padded3 p3;
+
+	printf("\nstruct Padded2 p3\n");
+	printf("Sizeof %zd\n", sizeof(p3));		// Sizeof 24
+	printf("%lld\n", (long long)&p3);		// 620863616392
+	printf("%lld\n", (long long)&p3.a);		// 620863616392
+	printf("%lld\n", (long long)&p3.b);		// 620863616400
+	printf("%lld\n", (long long)&p3.c);		// 620863616408
+	
+
+
+	struct Person
+	{
+		char name[41];	// member
+		int age;		// member
+		float height;	// member
+	};
+
+	struct Person mommy;
+
+	printf("\nstruct Person\n");
+	printf("%lld\n", (long long)&mommy.name[0]);
+	printf("%lld\n", (long long)&mommy.age);
+	printf("%lld\n", (long long)&mommy.height);
+	printf("Sizeof %zd\n", sizeof(mommy));// 41 + 4 + 4 = 49 ?
+
+	struct Person f[4];
+
+	printf("Sizeof a structure array %zd\n", sizeof(f));
+	/*
+	|f[0].name        | f[0].age | f[0].height | ... ... |f[3].name        | f[3].age | f[3].height |
+	*/
+
+	return 0;
+}
+```
+
+
+### 📌 14.4 구조체의 배열 연습문제
 
 
 
