--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -286,10 +286,85 @@ int main()
 
 
 ### 📌 14.4 구조체의 배열 연습문제
+``` c
+#include <stdio.h>
+#include <string.h>
+
+#define Max_title 50
+#define Max_author 50
+#define Max_Library 3
+
+struct Book {
+	char title[Max_title];
+	char author[Max_author];
+	float price;
+};
+
+char* s_fgets(char* st, int n)
+{
+	char* pt;
+	char* find;
+
+	pt = fgets(st, n, stdin);
+	if (pt)
+	{
+		find = strchr(pt, '\n');
+		if (find)
+			*find = '\0';
+		else
+			while (getchar() != '\n')
+				continue;
+	}
+
+	return pt;
+}
+
+int main()
+{
+	struct Book library[Max_Library] = { {"None", "None", 0.0f}, };
+	int count = 0;
+
+	while (1)
+	{
+		printf("Input a book title or press [Enter] to stop.\n>>");
+		if (s_fgets(library[count].title, Max_author) == NULL)
+			break;
+		if (library[count].title[0] == '\0')
+			break;
+
+		printf("Input the author.\n>>");
+		s_fgets(library[count].author, Max_author);
+
+		printf("Input the price.\n>>");
+		int flag = scanf("%f", &library[count].price);
+		while (getchar() != '\n')
+			continue;
+
+		count++;
+		
+		if (count == Max_Library)
+		{
+			printf("No more books.\n");
+			break;
+		}
+	}
+
+	if (count > 0)
+	{
+		printf("\nThe list of books:\n");
+		for (int i = 0; i < count; ++i)
+			printf("\"%s\" written by %s: @%.1f\n", library[i].title, library[i].author, library[i].price);
+	}
+	else
+		printf("No books to show.\n");
+	
+
+	return 0;
+}
+```
 
 
-
-
+### 📌 
 
 
 
