--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -291,8 +291,25 @@ int main()
 #include <string.h>
 
 #define Max_title 50
-#define Max_author 50
 #define Max_Library 3
+#define Max_author 30
+
+char* s_fgets(char* st, int n)
+{
+	char* pt;
+	pt = fgets(st, n, stdin);
+
+	if (pt)
+	{
+		char* find;
+		if (find = strchr(pt, '\n'))
+			*find = '\0';
+		else
+			while (getchar() != '\n');
+	}
+
+	return pt;
+}
 
 struct Book {
 	char title[Max_title];
@@ -300,71 +317,104 @@ struct Book {
 	float price;
 };
 
-char* s_fgets(char* st, int n)
-{
-	char* pt;
-	char* find;
-
-	pt = fgets(st, n, stdin);
-	if (pt)
-	{
-		find = strchr(pt, '\n');
-		if (find)
-			*find = '\0';
-		else
-			while (getchar() != '\n')
-				continue;
-	}
-
-	return pt;
-}
-
 int main()
 {
-	struct Book library[Max_Library] = { {"None", "None", 0.0f}, };
+	struct Book Library[3] = { {"None", "None", 0.0f}, };
+
 	int count = 0;
 
 	while (1)
 	{
 		printf("Input a book title or press [Enter] to stop.\n>>");
-		if (s_fgets(library[count].title, Max_author) == NULL)
+		if (s_fgets(Library[count].title, Max_title) == NULL)
 			break;
-		if (library[count].title[0] == '\0')
+		if (Library[count].title == '\0')
 			break;
 
 		printf("Input the author.\n>>");
-		s_fgets(library[count].author, Max_author);
+		s_fgets(Library[count].author, Max_author);
 
 		printf("Input the price.\n>>");
-		int flag = scanf("%f", &library[count].price);
-		while (getchar() != '\n')
-			continue;
+		int flag = scanf("%f", &Library[count].price);
+		while (getchar() != '\n');
 
 		count++;
-		
+
 		if (count == Max_Library)
-		{
-			printf("No more books.\n");
 			break;
-		}
 	}
 
-	if (count > 0)
-	{
-		printf("\nThe list of books:\n");
-		for (int i = 0; i < count; ++i)
-			printf("\"%s\" written by %s: @%.1f\n", library[i].title, library[i].author, library[i].price);
-	}
-	else
-		printf("No books to show.\n");
-	
+	for (int i = 0; i < count; ++i)
+		printf("\"%s\" %s: $%.1f\n", Library[i].title, Library[i].author, Library[i].price);
 
 	return 0;
 }
 ```
 
 
-### 📌 14.5 구조체를 다른 구조체의 멤버로 사용하기
+### 📌 14.5 구조체를 다른 구조체의 멤버로 사용하기(중첩 구조체, Nested Structures)
+
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/be447da9-37b6-404a-8723-60aea7c28e39" />
+
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#define LEN 20
+
+struct names {			// A structure
+	char given[LEN];	// first name
+	char family[LEN];	// last name
+};
+
+struct reservation {	// Another structure
+	struct names guest;	// a nested structure
+	struct names host;  // one more nested structure
+	char food[LEN];
+	char place[LEN];
+
+	// time
+	int year;
+	int month;
+	int day;
+	int hours;
+	int minutes;
+};
+
+int main(void)
+{
+	struct reservation res = {
+		.guest = {"Nick", "Carraway"},
+		.host = {"Jay", "Gatsby"},
+		.place = {"the Gatsby mansion"},
+		.food = {"Escargot"},
+		.year = 1925,
+		.month = 4,
+		.day = 10,
+		.hours = 18,
+		.minutes = 30
+	};
+
+	printf("Dear %s %s,\n", res.guest.given, res.guest.family);
+	printf("I would like to serve you %s.\n", res.food);
+	printf("Please visit %s on %d/%d/%d at %d:%d.\n",
+		res.place, res.day, res.month, res.year, res.hours, res.minutes);
+	printf("Sincerely,\n");
+	printf("%s %s\n", res.host.given, res.host.family);
+
+	/*
+	Dear Nick Carraway,
+	I would like to serve you Escargot.
+	Please visit the Gatsby mansion on 10/4/1925 at 18:30.
+	Sincerely,
+	Jay Gatsby
+	*/
+
+	return 0;
+}
+```
+
+
+### 📌 
 
 
 
@@ -393,4 +443,8 @@ int main()
 
 
 
+
+
+
+### 📌 
 
