--- a/C/14.0_Structure.md
+++ b/C/14.0_Structure.md
@@ -414,11 +414,115 @@ int main(void)
 ```
 
 
-### 📌 
+### 📌 14.6 구조체와 포인터
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#define LEN 20
+
+struct names {
+	char given[LEN];
+	char family[LEN];
+};
+
+struct friend {
+	struct names full_name;
+	char mobile[LEN];
+};
+
+int main(void)
+{
+	struct friend my_friends[2] = {
+		{ {"Ariana", "Grande"}, "1234-1234"	},
+		{ {"Taylor", "Swift"}, "6550-8888" }
+	};
+
+	struct friend* girl_friend;
+
+	girl_friend = &my_friends[0];
+
+	printf("%zd\n", sizeof(struct friend));
+	printf("%lld %s\n", (long long)girl_friend, girl_friend->full_name.given);
+	// -> : indirect member access operator  <<- 포인터일 때는.
+
+	girl_friend++;
+
+	printf("%lld %s\n", (long long)girl_friend, (*girl_friend).full_name.given);
+	// . has higher precedence than *
+
+	return 0;
+}
+```
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+
+struct my_data
+{
+	int a;
+	char c;
+	float arr[2];
+};
+
+int main()
+{
+	struct my_data d1 = { 1234, 'A', };
+
+	d1.arr[0] = 1.1f;
+	d1.arr[1] = 2.2f;
+
+	printf("%d %c %lld\n", d1.a, d1.c, (long long)d1.arr);
+	printf("%f %f\n", d1.arr[0], d1.arr[1]);
+	printf("%lld %lld\n\n", (long long)&d1.arr[0], (long long)&d1.arr[1]);
+
+	struct my_data d2 = d1;  // 값들을 복사.
+
+	printf("%d %c %lld\n", d2.a, d2.c, (long long)d2.arr);
+	printf("%f %f\n", d2.arr[0], d2.arr[1]);
+	printf("%lld %lld\n", (long long)&d2.arr[0], (long long)&d2.arr[1]);
+
+	return 0;
+}
+```
+- 배열은 구조체 복사 시 배열의 값이 복사되고, 메모리 공간은 별도로 할당됩니다.
+- 포인터는 구조체 복사 시 포인터가 가리키는 메모리 주소만 복사되므로, 동적 메모리 주소를 공유하게 되어,  
+  두 구조체에서 같은 메모리 공간을 참조합니다.  
+``` c
+#define _CRT_SECURE_NO_WARNINGS
+#include <stdio.h>
+#include <stdlib.h>
+
+struct my_data
+{
+	int a;
+	char c;
+	float* arr;
+};
+
+int main()
+{
+	struct my_data d1 = { 1234, 'A', NULL };
+	d1.arr = (float*)malloc(sizeof(float) * 2);
+	d1.arr[0] = 1.1f;
+	d1.arr[1] = 2.2f;
+
+	printf("%d %c %lld\n", d1.a, d1.c, (long long)d1.arr);
+	printf("%f %f\n", d1.arr[0], d1.arr[1]);
+	printf("%lld %lld\n\n", (long long)&d1.arr[0], (long long)&d1.arr[1]);
+
+	struct my_data d2 = d1;  // 동적할당이 있는 구조체를 복사하면, 주소까지 같이 공유하게 된다.
+
+	printf("%d %c %lld\n", d2.a, d2.c, (long long)d2.arr);
+	printf("%f %f\n", d2.arr[0], d2.arr[1]);
+	printf("%lld %lld\n", (long long)&d2.arr[0], (long long)&d2.arr[1]);
+
+	return 0;
+}
+```
 
 
-
-
+### 📌 14.7 구조체를 함수로 전달하는 방법
 
 
 
